August_30/August_30/src/objects/Billable_Hours__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Billable_Hours_per_Month__c</fullName>
        <description>W-000090: Utilization information</description>
        <label>Actual Billable Hours per Month</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Billable_per_Month__c</fullName>
        <description>W-000090: Utilization information</description>
        <formula>Actual_Billable_Hours_per_Month__c / Expected_Billable_Hrs_per_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Billable % per Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Billable_Month__c</fullName>
        <description>W-000090: Utilization information</description>
        <label>Billable Month</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Billable_Hrs_per_Month__c</fullName>
        <formula>154</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Billable Hrs per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Billable_per_Month__c</fullName>
        <formula>0.885</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Billable % per Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Role_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>W-000090: Utilization information</description>
        <label>Project Role Hours</label>
        <referenceTo>Assigned_Resource__c</referenceTo>
        <relationshipLabel>Billable Hours</relationshipLabel>
        <relationshipName>Billable_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>W-000090: Utilization information.
To track billable hours for each resource per month</description>
    <label>Billable Hour</label>
    <nameField>
        <displayFormat>Billable No. - {0000}</displayFormat>
        <label>Billable No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billable Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>